# ai-threat-hunting

./: .gitignore  AGENTS.md  README.md  lab_1.py  lab_2.py  lab_3.py  lab_4.py  pyproject.toml
context/: AUTH.md  FILE.md  NETWORK.md  ORG.md  PROCESS.md
skills/elastic-security-onion/: SKILL.md
skills/elastic-security-onion/agents/: openai.yaml
skills/elastic-security-onion/references/: query-patterns.md
skills/elastic-security-onion/scripts/: elastic_client.py  query_elastic.py
utils/: chatgpt.py  elastic.py  structured_gpt.py
