[project]
name = "ai-threat-hunting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "elasticsearch>=8.18.1",
    "elasticsearch-dsl>=8.18.0",
    "marimo>=0.23.1",
    "openai>=2.32.0",
    "openai-agents>=0.14.2",
    "polars>=1.40.0",
]
