[project]
name = "ai-threat-hunting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "backoff>=2.2.1",
    "elasticsearch>=8.18.1",
    "elasticsearch-dsl>=8.18.0",
    "marimo>=0.23.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "openai>=2.32.0",
    "openai-agents>=0.14.2",
    "pandas>=3.0.2",
    "polars>=1.40.0",
    "pyarrow>=23.0.1",
    "seaborn>=0.13.2",
    "tabulate>=0.10.0",
]
